objects/ianb__Notification__c.object
<CustomObject>
    <description>A Recipient (User) of an Improved Noticeboard Notice</description>
    <fields>
        <fullName>ianb__AcknowledgedAndFlagged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that you have Acknowledged receipt of this Notification and Flagged the need to follow-up with someone before you can fulfil the terms of the Acknowledgement Statement</description>
        <inlineHelpText>Indicates that you have Acknowledged receipt of this Notification and Flagged the need to follow-up with someone before you can fulfil the terms of the Acknowledgement Statement</inlineHelpText>
        <label>Acknowledged and Flagged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ianb__AcknowledgedDate__c</fullName>
        <description>The date and time when you Acknowledged this Notification</description>
        <inlineHelpText>The date and time when you Acknowledged this Notification</inlineHelpText>
        <label>Acknowledged Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ianb__AcknowledgementStatement__c</fullName>
        <description>If this Notification requires acknowledgment, clicking &apos;Acknowledge&apos;, means you agree to this statement unconditionally. If you click &apos;Acknowledge and Flag&apos; you acknowledge receipt of the Notification and Flag to follow-up with someone on its fulfilment.</description>
        <formula>ianb__Notice__r.ianb__AcknowledgementStatement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this Notification requires acknowledgment, clicking &apos;Acknowledge&apos;, means you agree to this statement unconditionally. If you click &apos;Acknowledge and Flag&apos; you acknowledge receipt of the Notification and Flag to follow-up with someone on its fulfilment.</inlineHelpText>
        <label>Acknowledgement Statement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__Comment__c</fullName>
        <description>Any note you wish to add to support your response to this Notification</description>
        <inlineHelpText>Any note you wish to add to support your response to this Notification</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ianb__DeadlineToAcknowledgedDays__c</fullName>
        <description>Days elapsed between the Required Action Deadline and your Acknowedgement response to this Notification</description>
        <formula>IF(OR(ISNULL(  ianb__Notice__r.ianb__RequiredActionDeadline__c  ),ISNULL( ianb__AcknowledgedDate__c )), null,  
floor( ianb__AcknowledgedDate__c -  ianb__Notice__r.ianb__RequiredActionDeadline__c ))</formula>
        <inlineHelpText>Days elapsed between the Required Action Deadline and your Acknowedgement response to this Notification</inlineHelpText>
        <label>Deadline-to-Acknowledged (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ianb__DeadlineToOpenedDays__c</fullName>
        <description>Days elapsed between the Required Action Deadline and you first Opening this Notification</description>
        <formula>IF(OR(ISNULL(  ianb__Notice__r.ianb__RequiredActionDeadline__c  ),ISNULL( ianb__OpenedDate__c )), null, floor( ianb__OpenedDate__c -  ianb__Notice__r.ianb__RequiredActionDeadline__c ))</formula>
        <inlineHelpText>Days elapsed between the Required Action Deadline and you first Opening this Notification</inlineHelpText>
        <label>Deadline-to-Opened (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ianb__DisplayedDate__c</fullName>
        <description>The date and time that this Notification was first displayed in your Banner</description>
        <inlineHelpText>The date and time that this Notification was first displayed in your Banner</inlineHelpText>
        <label>Displayed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ianb__DisplayedLagDays__c</fullName>
        <description>Days elapsed between this Notification being issued to you and being first Displayed in your Banner</description>
        <formula>IF(OR(ISNULL( ianb__Notice__r.ianb__PublishedDate__c ),ISNULL(ianb__DisplayedDate__c)), null, floor( ianb__DisplayedDate__c - ianb__Notice__r.ianb__PublishedDate__c))</formula>
        <inlineHelpText>Days elapsed between this Notification being issued to you and being first Displayed in your Banner</inlineHelpText>
        <label>Displayed Lag (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ianb__DisplayedToOpenedLagDays__c</fullName>
        <description>Days elapsed between this Notification first being Displayed in your Banner and you Opening it</description>
        <formula>IF(OR(ISNULL( ianb__DisplayedDate__c ),ISNULL(  ianb__OpenedDate__c  )), null, floor(  ianb__OpenedDate__c  - ianb__DisplayedDate__c))</formula>
        <inlineHelpText>Days elapsed between this Notification first being Displayed in your Banner and you Opening it</inlineHelpText>
        <label>Displayed-to-Opened Lag (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ianb__NoticeBoard_Id__c</fullName>
        <description>De-normalisation for With Sharing access</description>
        <formula>ianb__Notice__r.ianb__NoticeBoard__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>De-normalisation for With Sharing access</inlineHelpText>
        <label>NoticeBoard Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__NoticeBoard_Name__c</fullName>
        <formula>ianb__Notice__r.ianb__NoticeBoard__r.Name</formula>
        <inlineHelpText>Hidden field used to show parent field when visbility on parent record might be different</inlineHelpText>
        <label>NoticeBoard Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__NoticeBoard_Theme_Image_Url__c</fullName>
        <description>Hidden field used to show parent field when visbility on parent record might be different</description>
        <formula>ianb__Notice__r.ianb__NoticeBoard__r.ianb__ThemeImageUrl__c</formula>
        <label>NoticeBoard Theme Image Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__Notice_Allow_Comment__c</fullName>
        <description>Hidden field used to show parent field when visbility on parent record might be different</description>
        <formula>ianb__Notice__r.ianb__AllowComment__c</formula>
        <label>Notice Allow Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ianb__Notice_Banner_Required_Action__c</fullName>
        <description>Hidden field used to show parent field when visbility on parent record might be different</description>
        <formula>ianb__Notice__r.ianb__BannerRequiredAction__c</formula>
        <label>Notice Banner Required Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__Notice_CustomStyle__c</fullName>
        <formula>ianb__Notice__r.ianb__CustomStyle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notice Custom Style</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__Notice_Detail__c</fullName>
        <description>Hidden field used to show parent field when visbility on parent record might be different. Needs to be populated with a trigger as salesforce formulas cant reference &apos;rich text&apos; fields.</description>
        <label>Notice Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ianb__Notice_ImageURL__c</fullName>
        <description>Used to show parent field when visbility on parent record might be different</description>
        <formula>IF(ISNULL(ianb__Notice__r.ianb__ImageURL__c), &apos;&apos;, ianb__Notice__r.ianb__ImageURL__c)</formula>
        <inlineHelpText>Used to show parent field when visbility on parent record might be different</inlineHelpText>
        <label>Notice Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__Notice_NoticeBoardName__c</fullName>
        <description>Denormalisation for sharing rules</description>
        <inlineHelpText>Denormalisation for sharing rules</inlineHelpText>
        <label>NoticeBoard Name (Text)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__Notice_Published_Date__c</fullName>
        <description>Hidden field to pull down potentially non visible parent field</description>
        <formula>ianb__Notice__r.ianb__PublishedDate__c</formula>
        <label>Notice Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ianb__Notice_Required_Action_Deadline__c</fullName>
        <description>Hidden field to display potentially non visible parent field</description>
        <formula>ianb__Notice__r.ianb__RequiredActionDeadline__c</formula>
        <label>Notice Required Action Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ianb__Notice_Required_Action__c</fullName>
        <description>Hidden field to show parent record details even though record visibility might be different</description>
        <formula>TEXT(ianb__Notice__r.ianb__RequiredAction__c)</formula>
        <label>Notice Required Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__Notice_Salutation_Other__c</fullName>
        <description>Notice__r.Salutation_Other__c</description>
        <formula>ianb__Notice__r.ianb__Salutation_Other__c</formula>
        <label>Notice Salutation Other</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__Notice_Salutation__c</fullName>
        <description>Hidden field used to show parent field when visbility on parent record might be different</description>
        <formula>TEXT(ianb__Notice__r.ianb__Salutation__c)</formula>
        <label>Notice Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__Notice_Status__c</fullName>
        <description>Hidden field used to pull status from parent object which may have different record visibility</description>
        <formula>TEXT(ianb__Notice__r.ianb__NoticeStatus__c)</formula>
        <label>Notice Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__Notice_Vote_Choices__c</fullName>
        <description>Hidden field used to show parent field when visbility on parent record might be different</description>
        <formula>ianb__Notice__r.ianb__VoteChoices__c</formula>
        <label>Notice Vote Choices</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__Notice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent, generic Notice record that controls this personalised Notification</description>
        <inlineHelpText>The parent, generic Notice record that controls this personalised Notification</inlineHelpText>
        <label>Notice</label>
        <referenceTo>ianb__Notice__c</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ianb__NotificationStatus__c</fullName>
        <description>Shows Notification lifecycle progress through Draft, Issued, Displayed, Opened and optionally Acknowledged</description>
        <formula>if( ispickval( ianb__Notice__r.ianb__NoticeStatus__c,&quot;Drafted&quot;),&quot;A: Draft&quot;, if( ISBLANK( ianb__AcknowledgedDate__c),if(isblank( ianb__OpenedDate__c ),if(isblank( ianb__DisplayedDate__c ),&quot;B: Issued&quot;,&quot;C: Displayed&quot;),&quot;D: Opened&quot;),&quot;E: Acknowledged&quot;))</formula>
        <inlineHelpText>Shows Notification lifecycle progress through Draft, Issued, Displayed, Opened and optionally Acknowledged</inlineHelpText>
        <label>Notification Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__OpenedDate__c</fullName>
        <description>The date and time when you first opened this Notification</description>
        <inlineHelpText>The date and time when you first opened this Notification</inlineHelpText>
        <label>Opened Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ianb__OpenedToAcknowledgedLagDays__c</fullName>
        <description>Days elapsed between when you first Opened and subsequently Acknowledged this Notification</description>
        <formula>IF(OR(ISNULL(  ianb__OpenedDate__c  ),ISNULL(  ianb__AcknowledgedDate__c  )), null, floor(  ianb__AcknowledgedDate__c  -  ianb__OpenedDate__c ))</formula>
        <inlineHelpText>Days elapsed between when you first Opened and subsequently Acknowledged this Notification</inlineHelpText>
        <label>Opened-to-Acknowledged Lag (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ianb__PublishedDate__c</fullName>
        <description>The date and time when this Notification was first issued to you</description>
        <formula>ianb__Notice__r.ianb__PublishedDate__c</formula>
        <inlineHelpText>The date and time when this Notification was first issued to you</inlineHelpText>
        <label>Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ianb__Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The specific User who will receive this Notification</description>
        <inlineHelpText>The specific User who will receive this Notification</inlineHelpText>
        <label>Recipient</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RecipientNotices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ianb__RequiredActionComplete__c</fullName>
        <description>Formula confirming that Required Action has been completed by Recipient (1 = True; 0 = False)</description>
        <formula>IF(  OR(ISPICKVAL( ianb__Notice__r.ianb__NoticeStatus__c , &quot;Published&quot;),ISPICKVAL( ianb__Notice__r.ianb__NoticeStatus__c , &quot;Suspended&quot;), ISPICKVAL( ianb__Notice__r.ianb__NoticeStatus__c , &quot;Closed&quot;))   ,  IF(  ISPICKVAL( ianb__Notice__r.ianb__RequiredAction__c , &quot;Read and Acknowledge&quot;) ,  IF( ISNULL( ianb__AcknowledgedDate__c ) , 0, 1)  ,  IF( ISNULL( ianb__OpenedDate__c ) , 0, 1) ) , null)</formula>
        <inlineHelpText>Formula confirming that Required Action has been completed by Recipient (1 = True; 0 = False)</inlineHelpText>
        <label>Required Action Complete?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ianb__RequiredActionCompletedByDeadline__c</fullName>
        <description>Formula confirming that Required Action was completed by Recipient before Required Action Deadline (1 = True; 0 = False)</description>
        <formula>IF( OR(ISPICKVAL( ianb__Notice__r.ianb__NoticeStatus__c , &quot;Published&quot;),ISPICKVAL( ianb__Notice__r.ianb__NoticeStatus__c , &quot;Suspended&quot;), ISPICKVAL( ianb__Notice__r.ianb__NoticeStatus__c , &quot;Closed&quot;)) , IF( ISPICKVAL( ianb__Notice__r.ianb__RequiredAction__c , &quot;Read and Acknowledge&quot;) , IF(  ianb__Notice__r.ianb__RequiredActionDeadline__c &lt; ianb__AcknowledgedDate__c , 0, 1) , IF(  ianb__Notice__r.ianb__RequiredActionDeadline__c &lt; ianb__OpenedDate__c  , 0, 1) ) , 0)</formula>
        <inlineHelpText>Formula confirming that Required Action was completed by Recipient before Required Action Deadline (1 = True; 0 = False)</inlineHelpText>
        <label>Required Action Completed By Deadline?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ianb__RequiredActionDeadline__c</fullName>
        <description>The date and time by which you must complete the &apos;Required Action&apos;</description>
        <formula>ianb__Notice__r.ianb__RequiredActionDeadline__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The date and time by which you must complete the &apos;Required Action&apos;</inlineHelpText>
        <label>Required Action Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ianb__RequiredAction__c</fullName>
        <description>Inherits Notice Banner Required Action</description>
        <formula>ianb__Notice__r.ianb__BannerRequiredAction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The action you need to take in response to this Notification. You must...</inlineHelpText>
        <label>Required Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__ResponseOption__c</fullName>
        <description>Inherits Notice: Notification Response Option</description>
        <formula>TEXT(ianb__Notice__r.ianb__NotificationResponseOption__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the form of Acknowledgement response required for this Notification</inlineHelpText>
        <label>Response Option</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__Signatory__c</fullName>
        <description>The person, role, function or team that Issued this Notification - as in an email&apos;s &apos;From&apos; field</description>
        <formula>ianb__Notice__r.ianb__Signatory__c</formula>
        <inlineHelpText>The person, role, function or team that Issued this Notification - as in an email&apos;s &apos;From&apos; field</inlineHelpText>
        <label>Signatory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__Summary__c</fullName>
        <description>A succinct statement which can constitute the entire Notice or summarise its Detail</description>
        <formula>ianb__Notice__r.ianb__Summary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__Title__c</fullName>
        <description>The subject or headline for this Notice</description>
        <formula>ianb__Notice__r.ianb__Title__c</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__Urgency__c</fullName>
        <formula>IF(ISNULL(ianb__RequiredActionDeadline__c), &apos;&apos;,
IF((ianb__RequiredActionDeadline__c - NOW())*24 &gt; 24, IMAGE(&apos;/resource/1334066325000/ianb__noticeboard_resources/noticeboard_resources/images/dot-green.png&apos;,&apos;Low&apos;,18,18),
IF((ianb__RequiredActionDeadline__c - NOW())*24 &gt; 1, IMAGE(&apos;/resource/1334066325000/ianb__noticeboard_resources/noticeboard_resources/images/dot-amber.png&apos;,&apos;Normal&apos;,18,18),
IF((ianb__RequiredActionDeadline__c - NOW())*24 &lt; 0, IMAGE(&apos;/resource/1334066325000/ianb__noticeboard_resources/noticeboard_resources/images/dot-black.png&apos;,&apos;Very High&apos;,18,18),
IMAGE(&apos;/resource/1334066325000/ianb__noticeboard_resources/noticeboard_resources/images/dot-red.png&apos;,&apos;High&apos;,18,18)
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__VoteChoice__c</fullName>
        <label>Vote Choice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Notification</label>
    <listViews>
        <fullName>ianb__All</fullName>
        <columns>NAME</columns>
        <columns>ianb__Urgency__c</columns>
        <columns>ianb__NotificationStatus__c</columns>
        <columns>ianb__Signatory__c</columns>
        <columns>ianb__RequiredAction__c</columns>
        <columns>ianb__AcknowledgedDate__c</columns>
        <columns>ianb__RequiredActionDeadline__c</columns>
        <columns>ianb__PublishedDate__c</columns>
        <columns>ianb__DisplayedDate__c</columns>
        <columns>ianb__OpenedDate__c</columns>
        <columns>ianb__RequiredActionComplete__c</columns>
        <filterScope>Mine</filterScope>
        <label>1. All My Notifications</label>
    </listViews>
    <listViews>
        <fullName>ianb__My_Notifications_ActionToday</fullName>
        <columns>NAME</columns>
        <columns>ianb__Urgency__c</columns>
        <columns>ianb__Signatory__c</columns>
        <columns>ianb__RequiredAction__c</columns>
        <columns>ianb__RequiredActionDeadline__c</columns>
        <columns>ianb__PublishedDate__c</columns>
        <columns>ianb__DisplayedDate__c</columns>
        <columns>ianb__OpenedDate__c</columns>
        <columns>ianb__AcknowledgedDate__c</columns>
        <columns>ianb__RequiredActionComplete__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ianb__RequiredActionDeadline__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>ianb__RequiredActionComplete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>6. My Notifications - Must ACTION Today</label>
    </listViews>
    <listViews>
        <fullName>ianb__My_Notifications_Commented_On</fullName>
        <columns>NAME</columns>
        <columns>ianb__Title__c</columns>
        <columns>ianb__Signatory__c</columns>
        <columns>ianb__NotificationStatus__c</columns>
        <columns>ianb__Comment__c</columns>
        <columns>ianb__PublishedDate__c</columns>
        <columns>ianb__RequiredActionComplete__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ianb__Comment__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>8. My Notifications - Commented On</label>
    </listViews>
    <listViews>
        <fullName>ianb__My_Notifications_Flagged</fullName>
        <columns>NAME</columns>
        <columns>ianb__Urgency__c</columns>
        <columns>ianb__Signatory__c</columns>
        <columns>ianb__RequiredAction__c</columns>
        <columns>ianb__RequiredActionDeadline__c</columns>
        <columns>ianb__PublishedDate__c</columns>
        <columns>ianb__DisplayedDate__c</columns>
        <columns>ianb__OpenedDate__c</columns>
        <columns>ianb__AcknowledgedDate__c</columns>
        <columns>ianb__RequiredActionComplete__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ianb__AcknowledgedAndFlagged__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>7. My Notifications - Flagged</label>
    </listViews>
    <listViews>
        <fullName>ianb__My_Notifications_Last_Week</fullName>
        <columns>NAME</columns>
        <columns>ianb__Urgency__c</columns>
        <columns>ianb__Signatory__c</columns>
        <columns>ianb__RequiredAction__c</columns>
        <columns>ianb__RequiredActionDeadline__c</columns>
        <columns>ianb__PublishedDate__c</columns>
        <columns>ianb__DisplayedDate__c</columns>
        <columns>ianb__OpenedDate__c</columns>
        <columns>ianb__AcknowledgedDate__c</columns>
        <columns>ianb__RequiredActionComplete__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ianb__PublishedDate__c</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>3. My Notifications - Last Week</label>
    </listViews>
    <listViews>
        <fullName>ianb__My_Notifications_RequiringAction</fullName>
        <columns>NAME</columns>
        <columns>ianb__Urgency__c</columns>
        <columns>ianb__Signatory__c</columns>
        <columns>ianb__RequiredAction__c</columns>
        <columns>ianb__RequiredActionDeadline__c</columns>
        <columns>ianb__PublishedDate__c</columns>
        <columns>ianb__DisplayedDate__c</columns>
        <columns>ianb__OpenedDate__c</columns>
        <columns>ianb__AcknowledgedDate__c</columns>
        <columns>ianb__RequiredActionComplete__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ianb__RequiredActionComplete__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>5. My Notifications - Requiring ACTION</label>
    </listViews>
    <listViews>
        <fullName>ianb__My_Notifications_This_Month</fullName>
        <columns>NAME</columns>
        <columns>ianb__Urgency__c</columns>
        <columns>ianb__Signatory__c</columns>
        <columns>ianb__RequiredAction__c</columns>
        <columns>ianb__RequiredActionDeadline__c</columns>
        <columns>ianb__PublishedDate__c</columns>
        <columns>ianb__DisplayedDate__c</columns>
        <columns>ianb__OpenedDate__c</columns>
        <columns>ianb__AcknowledgedDate__c</columns>
        <columns>ianb__RequiredActionComplete__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ianb__PublishedDate__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>4. My Notifications - This Month</label>
    </listViews>
    <listViews>
        <fullName>ianb__My_Notifications_This_Week</fullName>
        <columns>NAME</columns>
        <columns>ianb__Urgency__c</columns>
        <columns>ianb__Signatory__c</columns>
        <columns>ianb__RequiredAction__c</columns>
        <columns>ianb__RequiredActionDeadline__c</columns>
        <columns>ianb__PublishedDate__c</columns>
        <columns>ianb__DisplayedDate__c</columns>
        <columns>ianb__OpenedDate__c</columns>
        <columns>ianb__AcknowledgedDate__c</columns>
        <columns>ianb__RequiredActionComplete__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ianb__PublishedDate__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>2. My Notifications - This Week</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>